# guarded-mcp

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml
docs/superpowers/plans/: 2026-04-03-gmail-gcal-integration.md
docs/superpowers/specs/: 2026-04-03-gmail-gcal-multi-account-design.md
src/: approval.py  auth.py  auth_cli.py  models.py  policy.py  server.py  setup.py
src/integrations/: base.py  calendar.py  dummy.py  gmail.py
tests/: conftest.py  test_approval.py  test_auth.py  test_calendar.py  test_gmail.py  test_models.py  test_policy.py  test_server.py  test_server_google.py
